Fix "links" `div` overflow across desktop and mobile

--- a/s/styles-homepage.css
+++ b/s/styles-homepage.css
@@ -1,14 +1,42 @@
+* {
+	box-sizing: border-box;
+}
+
 #homepage {
-    -webkit-text-size-adjust: none;
+	-webkit-text-size-adjust: none;
 }
-#homepage a.button
-{
-    color:white !important;
+
+#homepage a.button {
+	color: white !important;
 }
-#homepage ol, #homepage  ul {
+
+#homepage ol,
+#homepage ul {
 	list-style: none;
 }
-#homepage span, #homepage div, #homepage h3, #homepage h4, #homepage h5, #homepage h6, #homepage p, #homepage blockquote, #homepage pre, #homepage a, #homepage abbr, #homepage acronym, #homepage address, #homepage big, #homepage cite, #homepage code, #homepage del, #homepage dfn, #homepage em, #homepage img, #homepage  ul, #homepage  li {
+
+#homepage span,
+#homepage div,
+#homepage h3,
+#homepage h4,
+#homepage h5,
+#homepage h6,
+#homepage p,
+#homepage blockquote,
+#homepage pre,
+#homepage a,
+#homepage abbr,
+#homepage acronym,
+#homepage address,
+#homepage big,
+#homepage cite,
+#homepage code,
+#homepage del,
+#homepage dfn,
+#homepage em,
+#homepage img,
+#homepage ul,
+#homepage li {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -16,24 +44,33 @@
 	font: inherit;
 	vertical-align: baseline;
 }
-#homepage, #homepage *::before, #homepage  *::after {
+
+#homepage,
+#homepage *::before,
+#homepage *::after {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
+
 #homepage {
 	line-height: 1;
 }
-#homepage, #homepage  input, #homepage  textarea, #homepage  select {
+
+#homepage,
+#homepage input,
+#homepage textarea,
+#homepage select {
 	font-family: "XITS", sans-serif;
-color:rgb(41,140,202) !important;
+	color: rgb(41, 140, 202) !important;
 	font-weight: 300;
 	line-height: 1.75em;
 	font-size: 15pt;
 }
+
 .homepage #header-wrapper {
 	padding: 10em 0 0 0;
-	background-size: 440px 440px, #homepage				100% 100%, #homepage					auto;
+	background-size: 440px 440px;
 }
 
 .container {
@@ -42,50 +79,77 @@ color:rgb(41,140,202) !important;
 	width: 100%;
 	margin-bottom: 3em;
 }
-.container:last-child, #homepage article:last-child {
+
+.container:last-child,
+#homepage article:last-child {
 	margin-bottom: 0px;
 }
+
 #links {
-	position: relative;
+	position: fixed;
 	color: black;
 	text-align: left;
-	left:20%;
+	left: 20%;
 	z-index: 1;
-
 }
 
-#homepage section > :last-child, #homepage article > :last-child {
+#homepage section> :last-child,
+#homepage article> :last-child {
 	margin-bottom: 0px;
 }
+
 #homepage ul.actions {
 	padding-top: 16px;
 }
+
 #homepage ul.actions li {
 	display: inline-block;
 	margin-left: 16px;
 }
+
 #homepage ul.actions li:first-child {
 	margin-left: 0px;
 }
 
-#links h2 {
+#title {
 	color: #222222;
-	font-size: 48px;
+	font-size: 3rem;
 }
+
+#subtitle {
+	color: #9999FF;
+	font-size: 2rem;
+}
+
+@media only screen and (max-width: 768px) {
+	#title {
+		font-size: 2rem;
+		padding: 0;
+		margin-bottom: 1rem;
+	}
+
+	#subtitle {
+		padding-top: 0;
+		font-size: 1rem;
+	}
+}
+
 #logo {
 	position: absolute;
 	z-index: 1;
 	top: 0px;
-	text-align:center;
+	text-align: center;
 	width: 150px;
 }
 
-.homepage a:link, .homepage a:visited {
+.homepage a:link,
+.homepage a:visited {
 	text-decoration: none !important;
 	color: #0000FF !important;
 }
 
-.homepage a:hover, .homepage a:active {
+.homepage a:hover,
+.homepage a:active {
 	text-decoration: none !important;
 	color: #FF5500 !important;
 }
